<resources>
    <string name="app_name">MyInfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_profile">Set Profile</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">email</string>
    <string name="hint_number">Phone Number</string>
    <string name="hint_github">github</string>
    <string name="hint_skills">Skills</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="submit">Submit</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_age">Age</string>
    <string name="hint_address">Address</string>
    <string name="register">Register</string>
    <string name="progress_text">Please wait</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="terms_and_conditions">I accept the terms and conditions</string>
</resources>